Wed Mar 09 15:22:35 GMT 2005  Olly Betts <olly@survex.com>

	* testsuite/index_utils.cc: Fixed ^x to actually decode hex values
	  correctly.

Tue Mar 08 16:57:25 GMT 2005  Olly Betts <olly@survex.com>

	* matcher/multimatch.cc: Minor code tidy.

Tue Mar 08 15:48:38 GMT 2005  Olly Betts <olly@survex.com>

	* api/omenquire.cc,docs/matcherdesign.html,include/xapian/enquire.h,
	  matcher/multimatch.cc,tests/api_db.cc: Removed sort_bands support.

Tue Mar 08 04:13:03 GMT 2005  Olly Betts <olly@survex.com>

	* bin/quartzcompact.cc: Fixed to add items for all tables in key order
	  which produces results around 40% more compact (previously in the
	  merge case, this was only happening for the postlist table).

Tue Mar 08 03:30:06 GMT 2005  Olly Betts <olly@survex.com>

	* testsuite/btreecheck.cc: Make default check output fit on a single
	  line (at least for many databases).

Tue Mar 08 02:34:41 GMT 2005  Olly Betts <olly@survex.com>

	* matcher/multimatch.cc: Fix warning from newer versions of GCC.

Sat Mar 05 00:25:07 GMT 2005  Olly Betts <olly@survex.com>

	* api/omenquire.cc,common/omenquireinternal.h,include/xapian/enquire.h,
	  matcher/multimatch.cc,tests/api_db.cc: Fixed Xapian::RSet to have
	  the same "it's a handle" copy semantics as most of the other
	  classes.

Sat Mar 05 00:23:47 GMT 2005  Olly Betts <olly@survex.com>

	* testsuite/testsuite.h: Fixed TEST_EQUAL_DOUBLE to use DBL_EPSILON
	  correctly.

Fri Mar 04 21:06:38 GMT 2005  Olly Betts <olly@survex.com>

	* tests/testdata/etext.txt: Stripped carriage returns.

Fri Mar 04 21:04:25 GMT 2005  Olly Betts <olly@survex.com>

	* PLATFORMS: Assorted updates.

Thu Mar 03 01:17:07 GMT 2005  Olly Betts <olly@survex.com>

	* bin/quartzcompact.cc: Fixed to allow compacting a single database.
	  Fixed handling of very last term when merging postlists.

Wed Mar 02 03:18:30 GMT 2005  Olly Betts <olly@survex.com>

	* backends/quartz/quartz_values.cc: Values are stored in sorted order